--- a/src/page/koifish/koi-info/index.scss
+++ b/src/page/koifish/koi-info/index.scss
@@ -40,7 +40,8 @@
       }
 
       .koi-img {
-        width: 100%;
+        max-width: 100%;
+        max-height: 400px;
         height: auto;
         object-fit: cover;
         margin-bottom: 20px;
